K8s/helm/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 80
      host: monitoring.192.168.59.102.nip.io
  tls:
  - hosts:
    - monitoring.192.168.59.102.nip.io
    secretName: grafanassl
